// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IncompleteChecksSection renders 1`] = `
<CollapsibleResultSection
  badgeCount={3}
  cardRuleResults={
    Array [
      Object {},
      Object {},
      Object {},
    ]
  }
  containerClassName="incompleteChecksContainer"
  containerId="incomplete-checks-section"
  deps={Object {}}
  outcomeType="incomplete"
  title="Incomplete checks"
/>
`;

exports[`IncompleteChecksSection renders when card data is missing 1`] = `
<CollapsibleResultSection
  badgeCount={0}
  cardRuleResults={Array []}
  containerClassName="incompleteChecksContainer"
  containerId="incomplete-checks-section"
  deps={Object {}}
  outcomeType="incomplete"
  title="Incomplete checks"
/>
`;
